GNOME Bugzilla – Bug 790470
glimagesink: subtitle don't rotate with video
Last modified: 2018-11-03 12:01:51 UTC
transform meta don't apply to subtitle draw?
That, is a very good question. I don't think anybody's ever defined what happens on the interaction between the transformation meta, the rotation properties and subtitles.
(In reply to Matthew Waters (ystreet00) from comment #1) > That, is a very good question. I don't think anybody's ever defined what > happens on the interaction between the transformation meta, the rotation > properties and subtitles. Yes, I found that the subtitle is composited by gl alpha blend, but glimagesink didn't pass any rotation message to it.
It is probably a bit complicated, I can imagine cases were you need to rotate the video but keep the subtitles straight. I must admit, I thought these elements would only support composition in passthrough, so oops.
Created attachment 364717 [details] [review] gloverlaycompositor: add subtitle rotate support follow video
Any update?
To me the patch looks fine (except that you change an API, this breakage need to be mentioned in the commit, and didn't fix the other elements using that API). Though, at higher level, you didn't solve the main issue. There is a visual difference when the transformation matrix is added before or after. I can easily imagine a scenario where I want the text straight while on the video is rotated. And other scenario where the text should rotate/scale/whatever with the video. Which case so you implement, and why do you think it's the right way for now ? All this need to be answered here and/or in your commit message.
(In reply to Nicolas Dufresne (stormer) from comment #6) > To me the patch looks fine (except that you change an API, this breakage > need to be mentioned in the commit, and didn't fix the other elements using > that API). I will double check if the API change has impact on other components. On my side, seems no compile error. > > Though, at higher level, you didn't solve the main issue. There is a visual > difference when the transformation matrix is added before or after. > > I can easily imagine a scenario where I want the text straight while on the > video is rotated. And other scenario where the text should > rotate/scale/whatever with the video. Which case so you implement, and why > do you think it's the right way for now ? All this need to be answered here > and/or in your commit message. The patch will make subtitle always rotate with video, I think the case is meaningless which text straight while on the video is rotated. If there are some use cases for this scenario, please let me know.
Well, I have a use case. Take an iPad and hold it upside down to record. Then play that file and attached an external subtitle file. With this patch, the text will be upside down. The transformation in this case was to put back the image straight.
(In reply to Nicolas Dufresne (stormer) from comment #8) > Well, I have a use case. Take an iPad and hold it upside down to record. > Then play that file and attached an external subtitle file. With this patch, > the text will be upside down. The transformation in this case was to put > back the image straight. Then we can add a property to enable subtitle rotate or not.
I'd prefer if we fix this properly. There is a proposal from Tim that would allow figuring the order: https://bugzilla.gnome.org/show_bug.cgi?id=791415
-- GitLab Migration Automatic Message -- This bug has been migrated to freedesktop.org's GitLab instance and has been closed from further activity. You can subscribe and participate further through the new bug through this link to our GitLab instance: https://gitlab.freedesktop.org/gstreamer/gst-plugins-base/issues/402.