gloverlaycompositor: add subtitle rotate support follow video

upstream status: Pending
https://bugzilla.gnome.org/show_bug.cgi?id=790470