ext/gl/gstglimagesink.c
@@ -2188,6 +2188,9 @@ gst_glimage_sink_on_draw (GstGLImageSink * gl_sink)
   GstGLWindow *window = NULL;
   gboolean do_redisplay = FALSE;
   GstSample *sample = NULL;
+  GstVideoAffineTransformationMeta *af_meta;
+  gfloat matrix[16];
+
   guint gl_target = gst_gl_texture_target_to_gl (gl_sink->texture_target);
 
   g_return_if_fail (GST_IS_GLIMAGE_SINK (gl_sink));
@@ -2302,22 +2305,18 @@ gst_glimage_sink_on_draw (GstGLImageSink * gl_sink)
     gl->ActiveTexture (GL_TEXTURE0);
     gl->BindTexture (gl_target, gl_sink->redisplay_texture);
     gst_gl_shader_set_uniform_1i (gl_sink->redisplay_shader, "tex", 0);
-    {
-      GstVideoAffineTransformationMeta *af_meta;
-      gfloat matrix[16];
+    
+    af_meta =
+        gst_buffer_get_video_affine_transformation_meta
+        (gl_sink->stored_buffer[0]);
 
-      af_meta =
-          gst_buffer_get_video_affine_transformation_meta
-          (gl_sink->stored_buffer[0]);
+    gst_gl_get_affine_transformation_meta_as_ndc_ext (af_meta, matrix);
 
-      gst_gl_get_affine_transformation_meta_as_ndc_ext (af_meta, matrix);
+    if (gl_sink->transform_matrix)
+      gst_gl_multiply_matrix4 (gl_sink->transform_matrix, matrix, matrix);
 
-      if (gl_sink->transform_matrix)
-        gst_gl_multiply_matrix4 (gl_sink->transform_matrix, matrix, matrix);
-
-      gst_gl_shader_set_uniform_matrix_4fv (gl_sink->redisplay_shader,
-          "u_transformation", 1, FALSE, matrix);
-    }
+    gst_gl_shader_set_uniform_matrix_4fv (gl_sink->redisplay_shader,
+        "u_transformation", 1, FALSE, matrix);
 
     gl->DrawElements (GL_TRIANGLES, 6, GL_UNSIGNED_SHORT, 0);
 
@@ -2331,7 +2330,7 @@ gst_glimage_sink_on_draw (GstGLImageSink * gl_sink)
     if (gl_sink->ignore_alpha)
       gl->Disable (GL_BLEND);
 
-    gst_gl_overlay_compositor_draw_overlays (gl_sink->overlay_compositor);
+    gst_gl_overlay_compositor_draw_overlays (gl_sink->overlay_compositor, matrix);
   }
   /* end default opengl scene */
   window->is_drawing = FALSE;
